--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: Developer Hub
 markdown: kramdown
 highlighter: pygments
 safe: true
-baseurl: /developer-hub
+baseurl: /pubmedlabs
 exclude: ['.ruby-version', 'node_modules', 'package.json', 'bower.json']
 sass:
   sass_dir: static/_sass
@@ -12,7 +12,7 @@ defaults:
     scope:
       path: "" # an empty string here means all files in the project
     values:
-      organization-name: "Agency"
-      organization-url: "http://agency.gov"
-      organization-email: user@agency.gov
+      organization-name: "NCBI"
+      organization-url: "http://www.ncbi.nlm.nih.gov"
+      organization-email: pubmedlabbs@ncbi.nlm.nih.gov
       source-code-policy.url: 
