--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: Developer Hub
 markdown: kramdown
 highlighter: pygments
 safe: true
-baseurl: 
+baseurl: /pubmedlabs-site
 exclude: ['.ruby-version', 'node_modules', 'package.json', 'bower.json']
 sass:
   sass_dir: static/_sass
