--- a/_config.yml
+++ b/_config.yml
@@ -14,5 +14,5 @@ defaults:
     values:
       organization-name: "NCBI"
       organization-url: "http://www.ncbi.nlm.nih.gov"
-      organization-email: pubmedlabbs@ncbi.nlm.nih.gov
+      organization-email: pubmedlabs@ncbi.nlm.nih.gov
       source-code-policy.url: 
