--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: Developer Hub
 markdown: kramdown
 highlighter: pygments
 safe: true
-baseurl: /pubmedlabs-site
+baseurl: /pubmedlabs-template
 exclude: ['.ruby-version', 'node_modules', 'package.json', 'bower.json']
 sass:
   sass_dir: static/_sass
@@ -12,7 +12,7 @@ defaults:
     scope:
       path: "" # an empty string here means all files in the project
     values:
-      organization-name: "NCBI"
+      organization-name: "NCBI - PubMed Labs"
       organization-url: "http://www.ncbi.nlm.nih.gov"
       organization-email: pubmedlabs@ncbi.nlm.nih.gov
       source-code-policy.url: 
